# pet-care

./: Dockerfile  Jenkinsfile  main.py  pyproject.toml
apis/: queryapi.py  requestapi.py
aws/: aws_s3.py  aws_ses.py
models/: petrequest.py  query.py  requestresponse.py  updatequery.py
static/: swaggerv2.json  swaggerv3.json
