[tool.poetry]
name = "pet-care"
version = "1.0.0"
description = "petCare"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
flask-swagger-ui = "^4.11.1"
Flask-Cors = "^3.0.10"
gunicorn = "^20.1.0"
Werkzeug = "^2.1.2"
boto3 = "^1.24.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
